Istio-Playground/Security/authorization/mtls-strict-global.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: "istio-system" #! This applies to all namespaces
spec:
  mtls:
    mode: STRICT #! Enforce mTLS
