Istio-Playground/Security/authorization/policy-ratings-viewer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "ratings-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: ratings #! Allow requests to 'ratings'
  action: ALLOW
  rules:
  - from:
    - source: #! Set the source which this policy applies to
        principals: ["cluster.local/ns/default/sa/bookinfo-reviews"] #! Service account used by 'reviews'
    to:
    - operation:
        methods: ["GET"]
